# life

./: CMakeLists.txt
src/main/: life_main.c  life_util.c  life_util.h  perlin_noise.h
